2008-05-15  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_updates: uname returns the kernel version with the architecture at the end

2008-05-08  root  <matteo.corti@id.ethz.ch>

	* check_updates: Correct kernel versions sorting

2008-03-17  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_updates: CentoOS uses yum but had smp and non smp kernels

2008-03-07  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_updates: fixed a problem in the notification of a needed reboot

2008-02-26  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_updates: fixed a problem while counting the number of obsolete
			 packages

2008-02-21  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_updates: fixed the kernel check on RH systems

2008-02-21  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_updates: checks if the running kernel is the latest
                         installed
	* check_updates: removed backticks (using open -|)

2008-01-22  Matteo Corti  <matteo.corti@id.ethz.ch>

	* check_updates: recognizes CentOS
