@@ -25,7 +25,7 @@ use strict;
 use warnings;
 use Carp;
 
-use version; our $VERSION = '1.0.1';
+use version; our $VERSION = '1.0.2';
 
 use English qw(-no_match_vars);
 use Getopt::Long;
@@ -393,145 +393,3 @@ if ( $OSNAME eq 'linux' ) {
 }
 
 1;
-
-__END__
-
-=pod
-
-=head1 NAME
-
-C<check_updates> - a Nagios plugin to check if RedHat or Fedora system
-is up-to-date
-
-=head1 DESCRIPTION
-
-check_updates is a Nagios plugin to check if RedHat or Fedora system
-is up-to-date
-
-=head1 VERSION
-
-Version 1.0.1
-
-=head1 SYNOPSIS
-
- check_updates [--help] [--verbose] [--version]
-
- Options    
-  --help,-h,-?                  this help message
-  --verbose,-v                  verbose output
-  --version,-V                  print version
-
-=head1 REQUIRED ARGUMENTS
-
-
-=head1 OPTIONS
-
-  --help,-h,-?                  this help message
-
-  --version,-V                  print version
-
-  --verbose,-v                  verbose output
-
-=head1 EXAMPLE
-
- check_updates
-
-check_updates checks if the system is up-to-date
-
-=head1 DIAGNOSTICS
-
-You can specify multiple --verbose options to increase the program
-verbosity.
-
-=head1 EXIT STATUS
-
-0 if OK, 1 in case of a warning, 2 in case of a critical status and 3
-in case of an unkown problem
-
-=head1 DEPENDENCIES
-
-check_updates depends on
-
-=over 4
-
-=item * Carp
-
-=item * English
-
-=item * Getopt::Long
-
-=item * List::MoreUtils
-
-=item * List::Util
-
-=item * Nagios::Plugin
-
-=item * Nagios::Plugin::Threshold
-
-=item * Number::Format
-
-=item * POSIX
-
-=item * Pod::Usage
-
-=item * Sort::Versions
-
-=item * version
-
-=back
-
-=head1 CONFIGURATION
-
-=head1 INCOMPATIBILITIES
-
-None reported.
-
-=head1 SEE ALSO
-
-Nagios documentation
-
-=head1 BUGS AND LIMITATIONS
-
-No bugs have been reported.
-
-Please report any bugs or feature requests to matteo.corti@id.ethz.ch,
-or through the web interface at
-https://svn.id.ethz.ch/trac/bd_webhosting/newticket
-
-=head1 AUTHOR
-
-Matteo Corti <matteo.corti@id.ethz.ch>
-
-=head1 LICENSE AND COPYRIGHT
-
-Copyright (c) 2007, ETH Zurich.
-
-This module is free software; you can redistribute it and/or modify it
-under the terms of GNU general public license (gpl) version 3.
-See the LICENSE file for details.
-
-=head1 DISCLAIMER OF WARRANTY
-
-BECAUSE THIS SOFTWARE IS LICENSED FREE OF CHARGE, THERE IS NO WARRANTY
-FOR THE SOFTWARE, TO THE EXTENT PERMITTED BY APPLICABLE LAW. EXCEPT
-WHEN OTHERWISE STATED IN WRITING THE COPYRIGHT HOLDERS AND/OR OTHER
-PARTIES PROVIDE THE SOFTWARE "AS IS" WITHOUT WARRANTY OF ANY KIND,
-EITHER EXPRESSED OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, THE
-IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
-PURPOSE. THE ENTIRE RISK AS TO THE QUALITY AND PERFORMANCE OF THE
-SOFTWARE IS WITH YOU. SHOULD THE SOFTWARE PROVE DEFECTIVE, YOU ASSUME
-THE COST OF ALL NECESSARY SERVICING, REPAIR, OR CORRECTION.
-
-IN NO EVENT UNLESS REQUIRED BY APPLICABLE LAW OR AGREED TO IN WRITING
-WILL ANY COPYRIGHT HOLDER, OR ANY OTHER PARTY WHO MAY MODIFY AND/OR
-REDISTRIBUTE THE SOFTWARE AS PERMITTED BY THE ABOVE LICENCE, BE LIABLE
-TO YOU FOR DAMAGES, INCLUDING ANY GENERAL, SPECIAL, INCIDENTAL, OR
-CONSEQUENTIAL DAMAGES ARISING OUT OF THE USE OR INABILITY TO USE THE
-SOFTWARE (INCLUDING BUT NOT LIMITED TO LOSS OF DATA OR DATA BEING
-RENDERED INACCURATE OR LOSSES SUSTAINED BY YOU OR THIRD PARTIES OR A
-FAILURE OF THE SOFTWARE TO OPERATE WITH ANY OTHER SOFTWARE), EVEN IF
-SUCH HOLDER OR OTHER PARTY HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH
-DAMAGES.
-
-=head1 ACKNOWLEDGMENTS
-
